添加入口文件，设置包为公共

--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -16,5 +16,8 @@
   "scripts": {
     "test": "echo \"run utils\" !"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "publishConfig": {
+    "access": "public"
+  }
 }
