--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -6,6 +6,9 @@
   "homepage": "",
   "license": "ISC",
   "main": "lib/core.js",
+  "bin": {
+    "gk-common-cli-dev": "bin/index.js"
+  },
   "directories": {
     "lib": "lib",
     "test": "__tests__"
@@ -18,5 +21,8 @@
   },
   "dependencies": {
     "@gk-common-cli-dev/utils": "^1.0.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
